--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -68,3 +68,14 @@
     リスク図の表示形式としては漸増図と累積図がある。
     このリスク管理の基礎の部分はデッドラインで直感をモデル化したシミュレーションとして出てたやつよな。
     つまりリスク管理と直感はつながってるわけか。
+- date: 2025-11-06
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 107 ~ 133
+  notes: |
+    12 ~ 13
+    RISKOLOGY はモンテカルロ法のシミュレーションを表計算ソフトで表現したツール。
+    このツールでソフトウェアビジネス共通の問題(コア・リスク)である、スケジュールの欠陥・要求の増大・人員の離脱・仕様の崩壊・生産性の低迷をリスク管理する例を示す。
+    生産性の低迷以外のコア・リスクはチームの能力とは関係がないが、それは管理者の能力を無視した上での話。
+    仕様の崩壊はつまり要求仕様策定における対立が生み出す曖昧な仕様で製品が作れなくなること。これだけは他と違い発生するとプロジェクトが破綻する。
+    仕様の崩壊が顕現した形のひとつとして、ピーター・キーンが「カウンター・インプリメンテーション」と呼ぶ過剰な機能要求がある。
+    過小見積、変更・離脱者ゼロの幻想、プロジェクト内の対立、この辺は失敗もあろうけど大体は怠慢よな。
