--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -79,3 +79,16 @@
     仕様の崩壊はつまり要求仕様策定における対立が生み出す曖昧な仕様で製品が作れなくなること。これだけは他と違い発生するとプロジェクトが破綻する。
     仕様の崩壊が顕現した形のひとつとして、ピーター・キーンが「カウンター・インプリメンテーション」と呼ぶ過剰な機能要求がある。
     過小見積、変更・離脱者ゼロの幻想、プロジェクト内の対立、この辺は失敗もあろうけど大体は怠慢よな。
+- date: 2025-11-07
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 134 ~ 151
+  notes: |
+    14 ~ 15
+    コアリスク以外にプロジェクト固有のリスクも存在するが、リスクを指摘することがチームの利益に反するかのように取られるため、発見が難しい。
+    破滅的結果を想像し、そのシナリオを構築し、根本原因を分析するという決められたプロセスを踏むことで、バイアスを除去してリスクを発見できる。リスク移行するのと逆順にすることで恐怖を和らげる。
+    バリー・ベームの共存共栄スパイラル・プロセス・モデルにプロジェクトの勝利条件を定める方法は、プロジェクトに内在する対立を見つけられる可能性がある。
+    リスク管理を継続的に行う必要があるのは中盤になって計画不足、見落とし、関係づくりの不良、仮定条件見逃し、幸運への依存といった初期から存在する問題が顕現するため。
+    継続監視のために使えるメトリックとして境界要素・現在稼働価値(EVR)がある。境界要素はシステムの入出力の定義であり仕様の崩壊を防ぐ。
+    EVR はプロジェクトの完成度を表し進捗状況を表す。インクリメンタル手法と強い関係にある。
+    ビッグバン方式で完成度を証明できるのは最後の受入検査だけだが、インクリメンタル手法はバージョン毎の受入検査であらかじめ計算した EVR の割合で全体の進捗を証明できる。
+    リスクブレストやってみたくなるな。「天罰期」って言葉遣いも面白いので真似たくなるが日本文化で伝わるかな？
