--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -92,3 +92,14 @@
     EVR はプロジェクトの完成度を表し進捗状況を表す。インクリメンタル手法と強い関係にある。
     ビッグバン方式で完成度を証明できるのは最後の受入検査だけだが、インクリメンタル手法はバージョン毎の受入検査であらかじめ計算した EVR の割合で全体の進捗を証明できる。
     リスクブレストやってみたくなるな。「天罰期」って言葉遣いも面白いので真似たくなるが日本文化で伝わるかな？
+- date: 2025-11-08
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 152 ~ 164
+  notes: |
+    16 ~ 17
+    インクリメンタル開発は最初に詳細な全体の設計をし機能の優先順位を定めバージョンを区切りリリース計画を立てる。
+    部分的なリリースで仕事の区切りがつき士気を保ちやすい、プロジェクト仮定条件の確認や顧客からフィードバックを得やすいという利点もある
+    必ず最初に全体の詳細を設計しないと見積が破綻する、優先順位を決めなければ機能しないシステムがリリースされる恐れがある
+    最も効果的なリスク軽減策はプロジェクトのスケジュールにゆとりを持たせること。
+    ゆとりのない「勇敢な」スケジュールは調整を恐れた臆病者のスケジュール。
+    インクリメンタル開発を全面的に推してるけど、全体設計や優先順位のところは無し崩しスクラムに対する痛烈な批判に感じるな。
