--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -103,3 +103,14 @@
     最も効果的なリスク軽減策はプロジェクトのスケジュールにゆとりを持たせること。
     ゆとりのない「勇敢な」スケジュールは調整を恐れた臆病者のスケジュール。
     インクリメンタル開発を全面的に推してるけど、全体設計や優先順位のところは無し崩しスクラムに対する痛烈な批判に感じるな。
+- date: 2025-11-09
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 171 ~ 186
+  notes: |
+    18 ~ 19
+    システムを開発する理由がコスト削減だった時代は終わり、コストとその効果も厳密に求められるようになった。
+    効果の定義は曖昧なままにされがちだが、コストと効果は同じ精度で表す必要がある。効果が不確定ならコストも不確定にしなければならない。
+    組織は価値のないプロジェクトに労力を費やさないようリスク管理する必要がある。
+    効果もその不確定性をリスク図で表現できる。市場機会のような曖昧な効果は認められない。
+    上手くいく組織では、プロジェクトを意図的に評価し、予想される効果に応じて予算を削減する傾向がある。
+    効果が曖昧なでかいプロジェクトを立案したことがないのでなんともやが、いつか機会があるかも知れないし覚えておこう。
