--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -114,3 +114,14 @@
     効果もその不確定性をリスク図で表現できる。市場機会のような曖昧な効果は認められない。
     上手くいく組織では、プロジェクトを意図的に評価し、予想される効果に応じて予算を削減する傾向がある。
     効果が曖昧なでかいプロジェクトを立案したことがないのでなんともやが、いつか機会があるかも知れないし覚えておこう。
+- date: 2025-11-10
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 187 ~ 199
+  notes: |
+    20 ~ 22
+    システムのユーザーや発注者がその価値を測る責任がある。その手法としてインクリメンタル開発の各コンポーネントに価値をつければ全体の価値の偏りがわかるが、そう上手くはいかない。
+    いずれにせよインクリメンタル手法は顧客から優先順位を引き出すきっかけになる。
+    得られる価値が大きければ重大なリスクも負える。デスマーチプロジェクトは価値が低くコストを掛けられないのでメンバーの犠牲が無条件に求められる。
+    不確定図を使って価値とコストがバランスするか正味効果をシミュレーションすればプロジェクトの価値を予想できる。
+    20 はこれまでのリスク管理を反映させたリスク管理の手順。
+    価値の可視化とその過程で無駄を削ぎ落とすということかな。デスマーチが価値のないものにコストを掛けれない代わりに犠牲を払ってるってのは言い得て妙。
