--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -125,3 +125,13 @@
     不確定図を使って価値とコストがバランスするか正味効果をシミュレーションすればプロジェクトの価値を予想できる。
     20 はこれまでのリスク管理を反映させたリスク管理の手順。
     価値の可視化とその過程で無駄を削ぎ落とすということかな。デスマーチが価値のないものにコストを掛けれない代わりに犠牲を払ってるってのは言い得て妙。
+- date: 2025-11-11
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 201 ~ 214
+  notes: |
+    23 ~ 付録 A 「信念の倫理」第一部
+    リスク管理がされているか客観的に評価しなければならない。
+    リスク調査が行われる、定期的なリスク発見プロセスが行われる、不確定図が頻繁に使われる、目標と予想が別である、リスクに移行指標・危機対応計画・軽減計画がある。
+    最低限これらを実施していればリスク管理が行われていると見なせる。
+    他、リスクのエクスポージャーが評価されている、プロジェクトの価値が定量化され、何らかのインクリメンタル手法が使われている。
+    「信念の倫理」は、何かを信じること自体に倫理的責任が伴う、という感じ。エンジニアの職業倫理とも強く関係した話やな。
