--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -135,3 +135,15 @@
     最低限これらを実施していればリスク管理が行われていると見なせる。
     他、リスクのエクスポージャーが評価されている、プロジェクトの価値が定量化され、何らかのインクリメンタル手法が使われている。
     「信念の倫理」は、何かを信じること自体に倫理的責任が伴う、という感じ。エンジニアの職業倫理とも強く関係した話やな。
+- date: 2025-11-12
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 215 ~ 238
+  notes: |
+    付録 B ~ 最後まで。これで終わり。
+    リスク管理フォームから本書中であった管理ポイントをより具体時に見て取れる。
+    解説では日本でリスク管理が育たない事情にも触れられている。 JIT 生産なんかはある種リスク管理を削ってると見れるし。
+    あとがきでこれまでの著作とのつながりについて触れられているのも良い。
+    本書を読み終えて、本書でいうインクリメンタル手法にあたるアジャイル関連の本でリスク管理をあまり見たことがない気がした。アジャイルな見積りと計画づくりには載ってる。
+    わたしが開発者向けの本を好んで読んでいるから管理者向けの情報が入ってないだけではあるかも。
+    でも経験上アジャイルを標榜する組織でリスクらしいものを管理してるのを見たことがない気もする。
+    開発手法が構造的にリスクを減らすといってもなくなるわけじゃないのできちんと向き合わないといけないということやろな。
