--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -87,3 +87,6 @@
 - id: waltzing-with-bears
   bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
   bookAuthor: Tom DeMarco, Timothy Lister, 伊豆原弓
+- id: adrenaline-junkies
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  bookAuthor: Tom DeMarco, Peter Hruschka, Timothy Lister, Steve McMenamin, James Rovertson, Suzanne Robertson, 伊豆原弓
