--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -147,3 +147,14 @@
     わたしが開発者向けの本を好んで読んでいるから管理者向けの情報が入ってないだけではあるかも。
     でも経験上アジャイルを標榜する組織でリスクらしいものを管理してるのを見たことがない気もする。
     開発手法が構造的にリスクを減らすといってもなくなるわけじゃないのできちんと向き合わないといけないということやろな。
+- date: 2025-11-13
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: i ~ xi, 1 ~ 4
+  notes: |
+    はじめに ~ 1
+    アレクザンダーのパタン・ランゲージに倣いプロジェクトのパターンを集めた本。
+    アドレナリンジャンキー。誰もがいつも猛烈に忙しく、計画性がなく緊急性・切迫度の高さだけで仕事を選ぶ組織。
+    そこでは急ぎの仕事を徹夜残業や休日出勤で忙しく仕上げることが仲間の証。
+    アドレナリン中毒を直せる病院は存在せず、治すには急ぎの仕事を優先順位をつけて自制して取り組むしかない。
+    こういう組織いくつか実体験あるわ。概ねできないことを隠すために忙しくしてる。
+    目次だけでも腹いっぱいになれる内容あるわ。前から順に読む必要もないが頭から読むことにした。
