--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -158,3 +158,16 @@
     アドレナリン中毒を直せる病院は存在せず、治すには急ぎの仕事を優先順位をつけて自制して取り組むしかない。
     こういう組織いくつか実体験あるわ。概ねできないことを隠すために忙しくしてる。
     目次だけでも腹いっぱいになれる内容あるわ。前から順に読む必要もないが頭から読むことにした。
+- date: 2025-11-14
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 5 ~ 19
+  notes: |
+    2 ~ 5
+    スピード勝負。本能的に切迫感を持ってい遅れが成功にもたらす意識がある組織。その逆には行動は伴わない。
+    死んだ魚。プロジェクト初日から達成できないことを知りながら何も言わない人々。
+    幸福礼賛会議。儀礼的に健全であるように見せかけ実際はその逆な会議。
+    乳母。チーム一人一人の才能を育て上げるマネージャー。
+    関連痛。根幹の問題でなく枝葉の問題を対処してしまう。
+    各パターンなるべく短く一言で表現するようにしてみる。
+    死んだ魚は、勇敢な人が経営者や上層部に伝えても変わらなかった結果でも生まれるというのが実感としてある。
+    わたしの理解では、マネージャの仕事が準備なのと同じで、始まる前から組織が腐っているわけ。
