--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -171,3 +171,14 @@
     各パターンなるべく短く一言で表現するようにしてみる。
     死んだ魚は、勇敢な人が経営者や上層部に伝えても変わらなかった結果でも生まれるというのが実感としてある。
     わたしの理解では、マネージャの仕事が準備なのと同じで、始まる前から組織が腐っているわけ。
+- date: 2025-11-15
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 20 ~ 34
+  notes: |
+    7 ~ 10
+    マニャーナ。「いつかそのうち」では仕事は片付かない。切迫感を持って取り組む必要がある。
+    アイコンタクト。任務が緊急・複雑なほど同じ場所で仕事をする必要性が高まる。熱心なメンバーを 1 か所に集めると奇跡が起こる。分散化されたチームには追加のコストがかかる。
+    ムードリング。プロジェクトの定量的な状況を示さず、感情的な雰囲気だけを報告することは、プロジェクトに危機をもたらす。
+    信者。メソドロジーの信奉者は状況に応じた判断ができず、プロジェクト思考を妨げることがある。
+    信者とはなるべく関わらないようにしてるが、マニャーナ、ムードリングは常々起こるしその 可能性に注意している。
+    アイコンタクトは、自分がリモートワークながらその有用性は知っているので、伝家の宝刀という認識。
