--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -182,3 +182,14 @@
     信者。メソドロジーの信奉者は状況に応じた判断ができず、プロジェクト思考を妨げることがある。
     信者とはなるべく関わらないようにしてるが、マニャーナ、ムードリングは常々起こるしその 可能性に注意している。
     アイコンタクトは、自分がリモートワークながらその有用性は知っているので、伝家の宝刀という認識。
+- date: 2025-11-16
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 35 ~ 47
+  notes: |
+    11 ~ 15
+    魂を貸す。技術に魂を売る者はそれに固執し離れられなくなる。プロは技術に魂を貸し、問題解決に必要な新しい技術があればそれ受け入れる。
+    レミングサイクル。プロセスを調整することで批判・失敗する恐怖から逃れるために標準プロセスを守り続け失敗する。
+    ベンチに人なし。コスト削減を重視するあまり交代要員を準備せず結果代打が必要なときに準備に時間を浪費する。
+    フェイスタイム。地理的に分散したチームは本来難しい。でも 1 か所に顔を集める機会を重ねることで互いの善意の関係性を築くことができる。
+    「どうしてミケランジェロになれないんだ？」。生産性の向上を期待して導入するツールにも使いこなすための技能が必要。給料の安さだけで人を雇うとツールの性能は発揮できない。
+    今の会社ではほとんどの人に会ったことがないので、本書に従えばチームとして 120% の性能は発揮できてないのだろうな。 1 人でやる分には困ってないけど。
