--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -193,3 +193,15 @@
     フェイスタイム。地理的に分散したチームは本来難しい。でも 1 か所に顔を集める機会を重ねることで互いの善意の関係性を築くことができる。
     「どうしてミケランジェロになれないんだ？」。生産性の向上を期待して導入するツールにも使いこなすための技能が必要。給料の安さだけで人を雇うとツールの性能は発揮できない。
     今の会社ではほとんどの人に会ったことがないので、本書に従えばチームとして 120% の性能は発揮できてないのだろうな。 1 人でやる分には困ってないけど。
+- date: 2025-11-17
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 48 ~ 67
+  notes: |
+    16 ~ 20, 閑話
+    ダッシュボード。弱いチームではダッシュボードは晒し台になる。強いチームでは判断を促し未来予測に使われることで成功の確率を高める。
+    永遠の議論。一度決まったことに延々メンバーが不平不満を漏らして貴重な時間を浪費する。明確な意思決定プロセスを示すのがマネージャーの責務。
+    子犬と老犬。若者の学びの姿勢・高揚感が組織の学びのリズムを作る。老兵も若者のリズムに触れて学習のペースを高める。若者を雇わない会社はリスクを避けているだけ。
+    映画評論家。プロジェクトの成否に興味なく自分だけは成功する自身を持った傍観者。批判だけする人。傍観者はプロジェクトの目標が分離した一例であり、成功率を下げる。
+    一人一役。自分が何の役割を期待されているか理解し自信を持って責任を引き受ける。このパターンの組織は目的意識を持って取り組む。役割が不明瞭であればうろたえ、全員が責任を担えば何一つうまくいかない。
+    プロジェクトことば。無害なことばに隠れた不穏な意味。「ベストプラクティス」はわたしも気をつけて使うな。思考放棄ですごく無責任に聞こえるときもある。
+    ダッシュボードだけパターンと言うかツールの話。 一人一役の全員が責任を持つやつは傍観者効果に近い。
