--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -205,3 +205,14 @@
     一人一役。自分が何の役割を期待されているか理解し自信を持って責任を引き受ける。このパターンの組織は目的意識を持って取り組む。役割が不明瞭であればうろたえ、全員が責任を担えば何一つうまくいかない。
     プロジェクトことば。無害なことばに隠れた不穏な意味。「ベストプラクティス」はわたしも気をつけて使うな。思考放棄ですごく無責任に聞こえるときもある。
     ダッシュボードだけパターンと言うかツールの話。 一人一役の全員が責任を持つやつは傍観者効果に近い。
+- date: 2025-11-18
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 68 ~ 79
+  notes: |
+    21 ~ 25
+    ロシア式。機能面以外の要求を蔑ろにするとユーザビリティを落として嫌われる。
+    自然な権威。能力があるところに権威が生まれ、権威がある人が決定を下すのが健全。逆は階層組織での決定。
+    静か過ぎるオフィス。活気を失った組織のメンバーは無為に過ごす。
+    白線。プロジェクトが明確な境界≒外部とのインタフェースを定義することでスコープが定まる。
+    沈黙は同意とみなされる。権力がある方は往々にして沈黙を同意とみなす。ノーと言うか難しければ約束リストを作るだけで「同意しなければ同意とみなさない」状態にできる。
+    不自然な権威と沈黙は同意は関連があるな。歪な権威構造が歪な同意を生むんだわ。
