--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -216,3 +216,9 @@
     白線。プロジェクトが明確な境界≒外部とのインタフェースを定義することでスコープが定まる。
     沈黙は同意とみなされる。権力がある方は往々にして沈黙を同意とみなす。ノーと言うか難しければ約束リストを作るだけで「同意しなければ同意とみなさない」状態にできる。
     不自然な権威と沈黙は同意は関連があるな。歪な権威構造が歪な同意を生むんだわ。
+- date: 2025-11-19
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 80 ~ 82
+  notes: |
+    26 かかし。かかしは手っ取り早く作れるソリューション。間違いを含むこともある。人は一から作るより改良するほうが得意なので、要求を引き出せる。
+    今日は障害対応で読む時間なし。
