--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -222,3 +222,15 @@
   notes: |
     26 かかし。かかしは手っ取り早く作れるソリューション。間違いを含むこともある。人は一から作るより改良するほうが得意なので、要求を引き出せる。
     今日は障害対応で読む時間なし。
+- date: 2025-11-20
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 83 ~ 97
+  notes: |
+    27 ~ 32
+    いつわりの緊急任務。リスクを回避するのは悪手だが、ありもしないリスクをでっち上げて少ない予算で緊急対応にしても得られるものはない。その結果本質的なビジネスに着手できないのも最悪手。
+    [時間]に切り札を奪われる。時間が差し迫ってから増員しても機能しない。また時間が足りなければできたはずの機能の完成させることができなくなる
+    ルイス＆クラーク。ビジネスの問題領域の探索のためプロジェクトに初期投資することで可能性を探れる。仮にプロジェクトに価値がない場合も不要なコストをかけずに済む。
+    ちびた鉛筆。過ぎたコスト削減は人を削り組織から離脱させ長期的に競争力を失わせる。
+    リズム。チームから生まれる一定のリズムがある。 1 週間、 1 ヶ月、半年は長過ぎる。リズムに合わせるという健全なプレッシャーが駆動力になる。決してマネージャーリズムを強制すべきでない。
+    残業に見る予兆。プロジェクト初期からの残業は熱意の表れでなく恐怖の表れである。失敗、解雇、非難など恐怖の文化が根付いている。
+    ネガティブなパターンはケチケチしてるのが多いな。そこがゆとりの法則と対立するんやろな。
