--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -234,3 +234,14 @@
     リズム。チームから生まれる一定のリズムがある。 1 週間、 1 ヶ月、半年は長過ぎる。リズムに合わせるという健全なプレッシャーが駆動力になる。決してマネージャーリズムを強制すべきでない。
     残業に見る予兆。プロジェクト初期からの残業は熱意の表れでなく恐怖の表れである。失敗、解雇、非難など恐怖の文化が根付いている。
     ネガティブなパターンはケチケチしてるのが多いな。そこがゆとりの法則と対立するんやろな。
+- date: 2025-11-21
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 98 ~ 109
+  notes: |
+    33 ~ 36
+    ポーカーの夕べ。仕事以外の目的での交流がチームの結束を高める。
+    エセ品質ゲート。品質チェックには形式と内容の 2 つがある。形式だけのエセ品質チェックでは意味の欠陥を見逃す。
+    テストの前のテスト。テストできるようにするためのテスト。製品だけでなくプロセスや文書にも適用できる。
+    サイダーハウス・ルール。チームの当事者でない人が作ったルールは実情に適さず守られない。ルールを作るならチームの一員になる必要がある。
+    33 はフルリモートになってできなくなったが昔は良くっやったな。ただ結束力は高まるが技術向上や学びと直結しないのも悩みどころというのが実感。
+    35 は今で言うシフトレフトの話。 34 は今でもレビューで難しい点ではあるな。
