--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -245,3 +245,14 @@
     サイダーハウス・ルール。チームの当事者でない人が作ったルールは実情に適さず守られない。ルールを作るならチームの一員になる必要がある。
     33 はフルリモートになってできなくなったが昔は良くっやったな。ただ結束力は高まるが技術向上や学びと直結しないのも悩みどころというのが実感。
     35 は今で言うシフトレフトの話。 34 は今でもレビューで難しい点ではあるな。
+- date: 2025-11-22
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 110 ~ 122
+  notes: |
+    37 ~ 40
+    まず話す、次に書く。短時間で効率的な決定を下すには会話をする必要があり、その結果を残すには文書化する必要がある。この両方をうまく使い分けることを忘れた組織が多い。
+    ダボハゼ。プロジェクトも個人も自分に過剰な負荷をかける傾向がある。プロジェクトであればマネージャーが権力者からの圧力を避けるためチームに負荷をかけ、個人は良かれと思って過剰な仕事を追う。ただし過剰な仕事量は仕事のスピードを落とすことになる。
+    アトラス。チームリーダーがあらゆることに長けていることで、次世代のリーダーが育たない、より規模の大きいチームにスケールしない、代替できないというリスクになる。
+    裸の組織。オープンを謳う組織は過剰な情報量をメンバーに詰め込み注意力をなくさせる。
+    アトラスのバス係数 1 の話はスタートアップにも通ずるが今のところそれに対する対処法をわたしは知らない。
+    裸の組織は、詰め込むのが悪いのであってオープンであること自体は問題ないと思う。問題は必要な情報も得られない組織であり、そういうところは未だ多い。
