--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -256,3 +256,15 @@
     裸の組織。オープンを謳う組織は過剰な情報量をメンバーに詰め込み注意力をなくさせる。
     アトラスのバス係数 1 の話はスタートアップにも通ずるが今のところそれに対する対処法をわたしは知らない。
     裸の組織は、詰め込むのが悪いのであってオープンであること自体は問題ないと思う。問題は必要な情報も得られない組織であり、そういうところは未だ多い。
+- date: 2025-11-23
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 123 ~ 139
+  notes: |
+    41 ~ 45
+    ピア・プレビュー。採用プロセスにチーム自身が関与することで人柄や技術面のミスマッチを避けられる。マネジャーの選出でも同様に使える。
+    シュノーケリングとスキューバダイビング。プロジェクトには俯瞰して全体を見る視点と深く調べる視点の両方が必要。
+    いまいましいインターフェイス。システム設計では外部インタフェースが最重要でありそれを知っているマネジャーは誤った仮定を立てる可能性に気を配る。
+    ブルーゾーン。決められた権限の範囲を超えた自律的な行動がプロジェクトに最良の結果をもたらすことがある。善意の秩序破りが価値を生むのとは逆に決められたことしかやらないことは阻害要因になる。
+    ニュースの改良。ネガティブな報告が正しく伝わらない。多くは恐怖の文化によりもたらされる。
+    わたしもブルーゾーンを謳歌してるのでわかるが、想像以上にグリーンゾーンで胡座かいてるヒトが大多数。
+    グリーンゾーンの人たちにはもっと自律性発揮してほしいけどそこを強制するのも違うし悩ましい。
