--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -48,7 +48,7 @@
   notes: |
     自分自身習慣化すると苦も無く継続できるのでその仕組みに興味があった。
     本編を読む前に監訳者解説とも目次を読んだ。
-    当初は一般書にあるようなファストアンドスロー的な単純な二分化された説明でなく、習慣の観点から人間の行動を司る複雑な仕組みを、従来の研究の再現性が低いことも踏まえて丹念に繙くらしい。
+    本書は一般書にあるようなファストアンドスロー的な単純な二分化された説明でなく、習慣の観点から人間の行動を司る複雑な仕組みを、従来の研究の再現性が低いことも踏まえて丹念に繙くらしい。
     また原著者の紹介。実績があるだけでなくブラックボックス的な研究に透明性をもたらすオープンサイエンスの旗手でもあるらしい。
     専門用語が多くその点ピンとこないが、解説はかなり読みやすい印象を得た。
 - date: 2025-04-07
