--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -268,3 +268,14 @@
     ニュースの改良。ネガティブな報告が正しく伝わらない。多くは恐怖の文化によりもたらされる。
     わたしもブルーゾーンを謳歌してるのでわかるが、想像以上にグリーンゾーンで胡座かいてるヒトが大多数。
     グリーンゾーンの人たちにはもっと自律性発揮してほしいけどそこを強制するのも違うし悩ましい。
+- date: 2025-11-24
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 140 ~ 153
+  notes: |
+    46 ~ 50
+    真実はゆっくり告げる。問題の兆候を知りたくない組織では、早く悪い真実を告げるマネジャーは生き残れず、生き残ったとしてもそれ以降ゆっくり真実を告げるようになる。これをスケジュール・チキンという。
+    エンドゲームの練習。プロジェクトの最終レビューに向けて常に練習しておくことでリリースの精度を高められる。
+    ミュージックメーカー。 IT 組織には音楽を嗜む人が極端に多い。
+    ジャーナリスト。状況報告を正確にすることが仕事だと勘違いするマネジャーがいるが、マネジャーの最大の目標がプロジェクトを成功裏に終わらせることだというを忘れている。
+    空席。ユーザーエクスペリエンスの任務を請け負う人がいないことで、プロジェクトの他の要素が揃っていてもユーザーにとって役に立たなさそうな製品ができてしまう。
+    ミュージックメーカーについてはそんなこと感じたことない。界隈の人がこの業界に就職してきたってのはごく少数あったけど。これは米国特有なのか日本がそうじゃないのか不明。
