--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -279,3 +279,15 @@
     ジャーナリスト。状況報告を正確にすることが仕事だと勘違いするマネジャーがいるが、マネジャーの最大の目標がプロジェクトを成功裏に終わらせることだというを忘れている。
     空席。ユーザーエクスペリエンスの任務を請け負う人がいないことで、プロジェクトの他の要素が揃っていてもユーザーにとって役に立たなさそうな製品ができてしまう。
     ミュージックメーカーについてはそんなこと感じたことない。界隈の人がこの業界に就職してきたってのはごく少数あったけど。これは米国特有なのか日本がそうじゃないのか不明。
+- date: 2025-11-25
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 154 ~ 168
+  notes: |
+    51 ~ 56
+    いとこのビニー。チームメンバー同士が最良の結果を目指して激しく議論する。それは仲間内の安全さがあるからで経営陣がリーダーの発言には同じようにならない。
+    機能のスープ。人々が欲するバラバラの機能をアナリストがビジネスプロセスと関連付けて整理する。また設計者がプロジェクトにスコープと境界を明確にして必要ない機能を取り込まない。これらを怠るとチグハグの多機能で役に立たないシステムになる。
+    データエラーの真犯人。多くの場合システムのデータには誤りや破損がある。バックアップから復旧することもできるが多くは地道な修正作業が必要になる。
+    その名は「ベン」。仕事を愛し、難しいことも楽しんでやってのける人がいる。もし彼らに過剰な仕事を割り振って彼らが楽しく感じなくなったら仕事を辞めてしまう。そしてそのチームはかけがえのない人材を失う。
+    ミス・マナーズ。仕事の結果とその仕事をした人を一緒くたにして正しく評価でいない組織。
+    知力の集中。複数のプロジェクトに並行して関わると、コンテキストスイッチにより知的最大出力を落とす。
+    知力の集中みると、副業をいくつも回せる人は知的最大出力を落としても平気な仕事をしてるんやろなと仮定できるな。わたしはよーやらんので一点集中。
