--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -291,3 +291,15 @@
     ミス・マナーズ。仕事の結果とその仕事をした人を一緒くたにして正しく評価でいない組織。
     知力の集中。複数のプロジェクトに並行して関わると、コンテキストスイッチにより知的最大出力を落とす。
     知力の集中みると、副業をいくつも回せる人は知的最大出力を落としても平気な仕事をしてるんやろなと仮定できるな。わたしはよーやらんので一点集中。
+- date: 2025-11-26
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 169 ~ 184
+  notes: |
+    57 ~ 62
+    「野球に泣くなんてのはないんだ！」。知的労働に於いても感情の発露はある。それは仕事への情熱の現れでもある。
+    暴力脱獄。対立からくる意見の相違をコミュニケーションの失敗とするのは原因から目を逸らしてるだけ。対立があるものだと認めて確率された対立解決手法に頼る方が余っ程建設的。
+    期日は必ず守る。必ず期日を守るチームは必ず品質基準を下げる。時間が進むほど人・技術・スコープ変更の手札がなくなって、最後にきれるのが時間・品質基準のどちらかだから時間を守ると品質を失う。
+    フード++。一緒に調理し食事することがチームに親近感を生み結束を高める。食べ物が人を結ぶのは、仕事のミーティングをしたり見込み客と強力なコネを築くのにカフェを使うのも同様。
+    ほったらかしの成果。プロジェクトの最終成果物で重要なのは製品だが、それ以外が要求されるのはプロジェクト内外のスポンサーがいるから。もしスポンサーなしに作成される成果物があれば、それは必要ないかスポンサーを探すべきだ。
+    隠れた美。プロジェクトの成果物の機能美をマネジャーが理解し評価する・しないによって設計者に与える影響は大きい。それが美しい仕事を評価できる人を増やすことにもつながる。
+    結束力が必ずしもチームの火力に繋がらんのがあるから難しいわ。機能美が余計なものと思われるのもあるあるや。そういうの本質的な価値を見失ってる。
