--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -303,3 +303,14 @@
     ほったらかしの成果。プロジェクトの最終成果物で重要なのは製品だが、それ以外が要求されるのはプロジェクト内外のスポンサーがいるから。もしスポンサーなしに作成される成果物があれば、それは必要ないかスポンサーを探すべきだ。
     隠れた美。プロジェクトの成果物の機能美をマネジャーが理解し評価する・しないによって設計者に与える影響は大きい。それが美しい仕事を評価できる人を増やすことにもつながる。
     結束力が必ずしもチームの火力に繋がらんのがあるから難しいわ。機能美が余計なものと思われるのもあるあるや。そういうの本質的な価値を見失ってる。
+- date: 2025-11-27
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 185 ~ 194
+  notes: |
+    63 ~ 65
+    わかりません。わからないと真実を伝えることが単に調べて回答すると伝われば協力を呼ぶこともある。真実を伝えられないのなら非難されるかも知れないといった恐怖が組織にはびこっているかも。
+    レイクウォビゴンの子供たち。レイクウォビゴン効果は自分を平均以上と認識するバイアスだが、組織におけるレイクウォビゴン効果はメンバーの優劣を曖昧にし、弱点を見逃し、改善の機会を失わせる。
+    共同学習。プロジェクトの初めからすべて理解していることはあり得ない。作り手と消費者の両方が互いに学び合う必要がある。
+    プロジェクトが進行しアイデアが固まるよりも前に早い段階で学習を始める。意思疎通にはモデリング言語が最適であることが多い。
+    レイクウォビゴンもあるあるやな。誰にも対しても良くないが、一部の真実を知りたくない層がいるからこの状況が生まれる認識。共同学習は今では方法論に組み込まれてることが多いか。
+    ただその方法論に固執して本質が見失われていることも多いから、こういうパターンで理解しておくのは有用そう。
