--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -314,3 +314,13 @@
     プロジェクトが進行しアイデアが固まるよりも前に早い段階で学習を始める。意思疎通にはモデリング言語が最適であることが多い。
     レイクウォビゴンもあるあるやな。誰にも対しても良くないが、一部の真実を知りたくない層がいるからこの状況が生まれる認識。共同学習は今では方法論に組み込まれてることが多いか。
     ただその方法論に固執して本質が見失われていることも多いから、こういうパターンで理解しておくのは有用そう。
+- date: 2025-11-28
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 195 ~ 208
+  notes: |
+    66 ~ 69, 閑話
+    魂の仲間。アジャイル界隈で見られるゲリラ的チームは従来型(Waterfall)のルールと全く違うが極初期のバージョ開発を探索的に行うようなイノベーションを志向する領域で素晴らしく機能する。まがい物に注意。
+    十字穴付きネジ。明らかに優れたアイデアでも受け入れられるまでに時間がかかる。 1 つのアイデアが受け入れられなくても、何度も地道に継続することで実績が伴いアイデアが受け入れられやすくなる。
+    イノベーションの予測。マネジャーはプロジェクトの開発におけるイノベーティブな側面と高い精度の完成予測を両立しなければならない。これに有効なのが反復的な開発である。
+    マリリン・マンスター。開発者をコストセンターと考える組織では、如何に優秀な開発者でも評価され裁量を得ることはない。イノベーションや品質を重視する組織では開発者を評価し相応の自由が与えられる。ただしそれも行き過ぎるとプロジェクト進行を阻害するような機能不全に陥る。
+    編集室の残骸。なんとなく内容が想像つくものもあれば全くつかないものもあるな。
