--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -319,7 +319,7 @@
   pages: 195 ~ 208
   notes: |
     66 ~ 69, 閑話
-    魂の仲間。アジャイル界隈で見られるゲリラ的チームは従来型(Waterfall)のルールと全く違うが極初期のバージョ開発を探索的に行うようなイノベーションを志向する領域で素晴らしく機能する。まがい物に注意。
+    魂の仲間。アジャイル界隈で見られるゲリラ的チームは従来型(Waterfall)のルールと全く違うが、どく初期の数バージョン開発を探索的に行うようなイノベーションを志向する領域で素晴らしく機能する。まがい物に注意。
     十字穴付きネジ。明らかに優れたアイデアでも受け入れられるまでに時間がかかる。 1 つのアイデアが受け入れられなくても、何度も地道に継続することで実績が伴いアイデアが受け入れられやすくなる。
     イノベーションの予測。マネジャーはプロジェクトの開発におけるイノベーティブな側面と高い精度の完成予測を両立しなければならない。これに有効なのが反復的な開発である。
     マリリン・マンスター。開発者をコストセンターと考える組織では、如何に優秀な開発者でも評価され裁量を得ることはない。イノベーションや品質を重視する組織では開発者を評価し相応の自由が与えられる。ただしそれも行き過ぎるとプロジェクト進行を阻害するような機能不全に陥る。
