--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -324,3 +324,18 @@
     イノベーションの予測。マネジャーはプロジェクトの開発におけるイノベーティブな側面と高い精度の完成予測を両立しなければならない。これに有効なのが反復的な開発である。
     マリリン・マンスター。開発者をコストセンターと考える組織では、如何に優秀な開発者でも評価され裁量を得ることはない。イノベーションや品質を重視する組織では開発者を評価し相応の自由が与えられる。ただしそれも行き過ぎるとプロジェクト進行を阻害するような機能不全に陥る。
     編集室の残骸。なんとなく内容が想像つくものもあれば全くつかないものもあるな。
+- date: 2025-11-29
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 209 ~ 224
+  notes: |
+    70 ~ 85
+    ブラウン運動。プロジェクトの最初に明確なビジョンを策定する必要がある。ビジョンがない状態で人を増やしても一貫性のないバラバラな計画になる。
+    音吐朗々。プロジェクトの目標≒ビジョンを常に見えるところに置く。バラバラな個人的目標やステークホルダーの目標があってもプロジェクトの最大の目標が軌道を修正する。
+    安全弁。チームの息抜きが生産性を高める。息抜きはチームから内発的に生まれるののである必要があり、経営層や人事部から与えられたり奨励されても誰も利用しない。
+    バベルの塔。プロジェクトの共通言語は想像よりの経時的環境的変化で共通の理解を失う。
+    リスクの大きさ次第では言葉を厳密に定義すべきときもある。成功するチームでは問題領域の学びを言葉に反映させて洗練させていく。
+    サプライズ。オーバーワークに対して報奨で応じる組織は決して報われない。メンバーがはした金で抱き込まれたと思ったり、当然の権利であると請求されたりするようになる。
+    冷蔵庫のドア。プロジェクトの計画・進捗・設計といった情報をいつも全員の目に見える場所に開示することは、プロジェクトメンバーに何を重視し何を重視しないかを伝える機会になる。
+    開示された情報は各メンバーの業績に対する自負であると共に、他のメンバーに対する信頼を示すことにもなる。
+    たまたま今日読んだセクションの多くは情報開示という透明性に関連するところがいくつかあった。
+    わたしも重視するところだが、多くの経営層は低レイヤの人たちが「ショックを受けないように」公開しないことを選ぶので、率直に信頼されてないんやろなと考えている。
