--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -339,3 +339,17 @@
     開示された情報は各メンバーの業績に対する自負であると共に、他のメンバーに対する信頼を示すことにもなる。
     たまたま今日読んだセクションの多くは情報開示という透明性に関連するところがいくつかあった。
     わたしも重視するところだが、多くの経営層は低レイヤの人たちが「ショックを受けないように」公開しないことを選ぶので、率直に信頼されてないんやろなと考えている。
+- date: 2025-11-30
+  bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
+  pages: 225 ~ 240
+  notes: |
+    76 ~ 80
+    明日には日が昇る。楽観的なマネジャーは過去の進捗遅れが例外で未来は順調に進むと考えるが、実際そうはいかない。
+    これは遅延の可能性が証明できないからでもある。 XP の「昨日の天気」手法では過去の生産性で次の反復の生産性を予測する。
+    パイリングオン。ステークホルダーの支援を装った機能追加がプロジェクトを失敗させる。反復開発では本質的な機能を先に開発するため耐性がある。
+    変更の季節。プロジェクトのスコープは必ず途中で調整が必要になる。
+    プロジェクト初期ほど変更を許容しやすいが頻繁な変更は流れを中断する。
+    比較的短期の反復開発であれば反復の切れ目で変更しやすい。
+    製紙工場。プロジェクトの状況報告のために大量の文書を作成する必要があるのは重要な作業から目をそらせてしまう。代わりにチームが定めた客観的な測定値を使う。
+    オフショアの愚行。チームが複数の拠点に分散されタイムゾーンも違えばコミュニケーションのコストが増大する。
+    オフショア開発を成功させるための助言。迅速な作業を必要とする反復は 1 カ所に集約、チームの耐上がりには時間を要する、国内チーム同様に明確なビジョンをが必要。
