--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -90,3 +90,6 @@
 - id: adrenaline-junkies
   bookTitle: アドレナリンジャンキー プロジェクトの現在と未来を映す 86 パターン
   bookAuthor: Tom DeMarco, Peter Hruschka, Timothy Lister, Steve McMenamin, James Rovertson, Suzanne Robertson, 伊豆原弓
+- id: exploring-the-world-of-fermented-soybeans-natto
+  bookTitle: 世界の納豆をめぐる探検
+  bookAuthor: 高野秀行, スケラッコ
