--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -11,3 +11,12 @@
     リーク。作業実績時間が予定を上回ったり監視が厳しいことで、それから逃れるために他の作業に実績時間を繰り延べる。リークは報告上の問題でなく、いつの間にかプロジェクトのコントロールを失わせ低品質な製品が出来上がる。
     テンプレートゾンビ。テンプレートが固定化し、テンプレートを埋めればプロジェクトが成功すると狂信した組織では、モデルやその他の役に立つアイデアが使えなくなる。
     これで持ってるデマルコ本は終わり。本書はパターン集なのもあり思い出したときに気になるパターンを読み返すのも良さそうだ。
+- date: 2025-12-02
+  bookTitle: 世界の納豆をめぐる探検
+  pages: 1 ~ 50
+  notes: |
+    息抜き回。セネガルに納豆が存在するという話を知って興味を持ったのと、絵本なら子供でも読めるし良いかなと思い買った。
+    日本の納豆の歴史から、世界の納豆文化へ。日本の本当に伝統的な納豆料理が江戸時代の終わりに消えたと。
+    納豆菌がどの国でもほぼ同じというのも面白い。どこでも納豆が作られているんだ。
+    アジアやアフリカで稲わらを使わず大豆以外の豆で納豆を作る話から、日本で大豆以前からツルマメで納豆が作られていたのではないかという話につながり面白い。
+    サンダー・キャッツ氏の著書でアジアやアフリカに納豆が存在するを知ったが、こちらのほうがもう少し細かく広く知れたかな。
