--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -93,3 +93,6 @@
 - id: exploring-the-world-of-fermented-soybeans-natto
   bookTitle: 世界の納豆をめぐる探検
   bookAuthor: 高野秀行, スケラッコ
+- id: essentialism
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  bookAuthor: Greg McKeown, 高橋璃子
