--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -20,3 +20,12 @@
     納豆菌がどの国でもほぼ同じというのも面白い。どこでも納豆が作られているんだ。
     アジアやアフリカで稲わらを使わず大豆以外の豆で納豆を作る話から、日本で大豆以前からツルマメで納豆が作られていたのではないかという話につながり面白い。
     サンダー・キャッツ氏の著書でアジアやアフリカに納豆が存在するを知ったが、こちらのほうがもう少し細かく広く知れたかな。
+- date: 2025-12-03
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 1 ~ 49
+  notes: |
+    何度も読んだ本だがまた読む。改めて原点に立ち返る。
+    最近は本質的なタスクだけに絞り切っても数が多く多忙になってしまうので、続きのエフォートレス思考も読む予定。
+    PART 1 エッセンシャル思考とは何か 第 1 章 エッセンシャル思考と非エッセンシャル思考。
+    エッセンシャル思考はより多く仕事をする生き方でなくて、本当に重要で絶対やるべきことだけに集中する、自分で正しい方向を選択して歩み続ける生き方。
+    個人的に La La Land も Equalizer の 1 と 3 も実にエッセンシャルやと感じる。自分の人生は自分で決めるわけだ。
