Update the book.

--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -29,3 +29,12 @@
     PART 1 エッセンシャル思考とは何か 第 1 章 エッセンシャル思考と非エッセンシャル思考。
     エッセンシャル思考はより多く仕事をする生き方でなくて、本当に重要で絶対やるべきことだけに集中する、自分で正しい方向を選択して歩み続ける生き方。
     個人的に La La Land も Equalizer の 1 と 3 も実にエッセンシャルやと感じる。自分の人生は自分で決めるわけだ。
+- date: 2025-12-04
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 50 ~ 79
+  notes: |
+    第 2 ~ 4 章。
+    誰かの選択を黙々と実行するのでなく「選ぶ」という行動を選び、自分の選択肢を手放さない・取り戻す。
+    「より少なくしかしより良く」するある種の努力は他を圧倒する。大多数には価値がなくごく少数のものごとが莫大な価値を持つため、多くを吟味し正しい選択肢がどれか検討する。
+    選ぶということはトレードオフを受け入れるということ。全てを選ぶことは何も優先しないのと同じ。それを誰かが決める前に自分で決める。何かを諦めるのでなくて何に全力を注ぐか。
+    選ばないことに関して学習性無力感が触れられてたが、個人的には選択し継続する上で認知バイアスを認識し客観的に判断することも重要と考える。
