--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -38,3 +38,13 @@
     「より少なくしかしより良く」するある種の努力は他を圧倒する。大多数には価値がなくごく少数のものごとが莫大な価値を持つため、多くを吟味し正しい選択肢がどれか検討する。
     選ぶということはトレードオフを受け入れるということ。全てを選ぶことは何も優先しないのと同じ。それを誰かが決める前に自分で決める。何かを諦めるのでなくて何に全力を注ぐか。
     選ばないことに関して学習性無力感が触れられてたが、個人的には選択し継続する上で認知バイアスを認識し客観的に判断することも重要と考える。
+- date: 2025-12-05
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 80 ~ 117
+  notes: |
+    Part 2 見極める技術。 第 5 ~ 7 章。
+    忙しい世の中では敢えて時間を取らない限り考える時間は確保できない。集中するためには集中せざるを得ない状況に自分を追い込む必要がある。
+    情報の本質を見抜くことは、大局観を持ちノイズの中から本質を見抜く、大きな流れ・ストーリーを掴みその中に埋もれた本当の課題は何なのかを見抜くこと。
+    遊び心それ自体が探究心と想像の源であり思いもよらない選択肢の発見、柔軟な思考、変化への対応を促す。
+    集中のために古典を読むくだり好き。わたしは古典に限らないがが毎日読書の時間を無理やり確保することで考える時間が増えた実感がある。
+    仕事を遊ぶことは常々実践してるが、これもまた理解されにくいよな。繋がると思えない点と点が繋がるのは柔軟な思考があってこそ。
