--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -48,3 +48,12 @@
     遊び心それ自体が探究心と想像の源であり思いもよらない選択肢の発見、柔軟な思考、変化への対応を促す。
     集中のために古典を読むくだり好き。わたしは古典に限らないがが毎日読書の時間を無理やり確保することで考える時間が増えた実感がある。
     仕事を遊ぶことは常々実践してるが、これもまた理解されにくいよな。繋がると思えない点と点が繋がるのは柔軟な思考があってこそ。
+- date: 2025-12-06
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 118 ~ 145
+  notes: |
+    Part 2 見極める技術。 第 8 ~ 9 章。
+    健康と成果のための睡眠の重要性。睡眠により脳が最適化されるので選択に集中する能力を維持することができる。
+    選択の基準は最も厳しい基準で 90% 以上の確信があるもののみ。絶対に YES だと思えないなら他はすべて NO 。圧倒されるもの以外を除外することで余裕が生まれ本当に重要なものに集中できる。
+    睡眠はホント重要なんやが子供がいると中々難しいよな。結局朝子供を起こす前提に立つと子供と同じ時間帯で寝ないと 8 時間は寝れないので厳しい。
+    Oura Ring を使い始めてから定量的に測定してるけど、それでも中々継続できてないことのひとつ。
