--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -57,3 +57,12 @@
     選択の基準は最も厳しい基準で 90% 以上の確信があるもののみ。絶対に YES だと思えないなら他はすべて NO 。圧倒されるもの以外を除外することで余裕が生まれ本当に重要なものに集中できる。
     睡眠はホント重要なんやが子供がいると中々難しいよな。結局朝子供を起こす前提に立つと子供と同じ時間帯で寝ないと 8 時間は寝れないので厳しい。
     Oura Ring を使い始めてから定量的に測定してるけど、それでも中々継続できてないことのひとつ。
+- date: 2025-12-07
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 146 ~ 179
+  notes: |
+    Part 3 捨てる技術。 第 10 ~ 11 章。
+    多数の些末なものを切り捨てるには、完全に明確な目標で達成の評価も明快な最終形を持つ必要がある。
+    何よりも本質的なことがわかっていれば、それ以外のことを断るのは簡単になる。あとは断るためのいくつかのテクニックを身につけておけばなお簡単になる。
+    実際に、あの人は〇〇を最優先で考えてるんだというメッセージは仕事の上でもとても役に立つ。
+    稀にそれで機嫌を損ねる人もいるので自己防衛としての断りの技術はあれば良いが、さほど重要度が高いわけではない認識。
