--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -66,3 +66,15 @@
     何よりも本質的なことがわかっていれば、それ以外のことを断るのは簡単になる。あとは断るためのいくつかのテクニックを身につけておけばなお簡単になる。
     実際に、あの人は〇〇を最優先で考えてるんだというメッセージは仕事の上でもとても役に立つ。
     稀にそれで機嫌を損ねる人もいるので自己防衛としての断りの技術はあれば良いが、さほど重要度が高いわけではない認識。
+- date: 2025-12-08
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 180 ~ 213
+  notes: |
+    第 12 ~ 14 章。
+    サンクコストや授かり効果といったバイアスでヒトは心理的に途中で辞めるのが難しい。そのテクニックとしてもったいない感覚や所有している感覚などを取り払いゼロベースで評価してみる。
+    また慣習で続けていることを「逆プロトタイプ」してきっぱり辞めてみることで、本当に必要なものなのか試すこともできる。
+    本質を取り出す作業は編集に似る。無駄を削ぎ落とし、より簡潔にし、目標に合わせて間違いを修正、ただし余計な手出しはしない。
+    NO の境界線。一度でも例外を許すと例外だらけになる。その境界は自分の人生を選択するための線引きでもある。
+    誰かの問題を引き受けない。明確な境界が限られた範囲内の最大の自由を生む。明確な境界線は相手に対して自分が何を大切にしているか示すメッセージでもある。
+    いまやリモートワークなのもあり仕事と私生活は融合してるようなものだけど、それでも自分がやらなくていい仕事を断れるのはこの考え方が身についたからかな。
+    誰にでもできるような仕事なら引き受ける必要ないしね。
