--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -78,3 +78,13 @@
     誰かの問題を引き受けない。明確な境界が限られた範囲内の最大の自由を生む。明確な境界線は相手に対して自分が何を大切にしているか示すメッセージでもある。
     いまやリモートワークなのもあり仕事と私生活は融合してるようなものだけど、それでも自分がやらなくていい仕事を断れるのはこの考え方が身についたからかな。
     誰にでもできるような仕事なら引き受ける必要ないしね。
+- date: 2025-12-09
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 214 ~ 241
+  notes: |
+    Part 3 しくみ化の技術。 第 15 ~ 16 章。
+    不測の事態は必ず起こる。何が起こってもいいように徹底的な準備と悲観的な計画を入念に行い、バッファを設けて最悪の事態に備える。
+    もしどうしても楽観的な見積もりしかできないなら、 1.5 倍に時間を増やしてみる。
+    ボトルネックを見つけて対処するこは、最小限の手当で最大の効果を生む普遍的な手法。
+    目標とする成果が明確にし、それを邪魔する要素の中から最優先のもの一つだけに集中して取り除く。
+    昔は気づかなかったが、多少リスク管理にも触れられてる。この Part はデマルコ本に通ずるものがあるな。
