--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -88,3 +88,15 @@
     ボトルネックを見つけて対処するこは、最小限の手当で最大の効果を生む普遍的な手法。
     目標とする成果が明確にし、それを邪魔する要素の中から最優先のもの一つだけに集中して取り除く。
     昔は気づかなかったが、多少リスク管理にも触れられてる。この Part はデマルコ本に通ずるものがあるな。
+- date: 2025-12-10
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 242 ~ 267
+  notes: |
+    第 17 ~ 18 章。
+    小さな成功を積み重ねることで大きな結果を得る。小さな一歩は始めやすい。
+    小さな一歩はヒトが意欲を高めるのに必要な達成とそれを認められることと相性が良く、積み重ねが高いパフォーマンスを生む。
+    Minimum Viable Product も同じ考え方。
+    正しい行動を日頃続けた先に当然のごとく成功があるように習慣づける。練習を重ねるほど簡単になる。
+    行動が自動化されることで脳のリソースを別のことに使える余裕が出る。
+    習慣を作るのは少しずつ、トリガーに関連づく悪い行動を書き換える、新しい行動には新しいトリガーを作る、決められたルールに従い行動する、等が行動変容のテクニック。
+    小さな成功を積み重ねる習慣は、この booklog もそうだが、行動変容にめちゃくちゃきくのが脳神経科学の本を読んでわかったので積極的に使っている。
