--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -100,3 +100,19 @@
     行動が自動化されることで脳のリソースを別のことに使える余裕が出る。
     習慣を作るのは少しずつ、トリガーに関連づく悪い行動を書き換える、新しい行動には新しいトリガーを作る、決められたルールに従い行動する、等が行動変容のテクニック。
     小さな成功を積み重ねる習慣は、この booklog もそうだが、行動変容にめちゃくちゃきくのが脳神経科学の本を読んでわかったので積極的に使っている。
+- date: 2025-12-11
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 268 ~ 295
+  notes: |
+    第 19 ~ 20 章。
+    過去の失敗や未来の不安に囚われず、今この瞬間に全力で集中する。
+    何が重要かを考え、優先順位に従い 1 つずつ行動する。古代ギリシアでいうカイロス。
+    マルチタスクはしてもマルチフォーカスしない。マインドフルネス。
+    生活のあちこちにエッセンシャル思考の Tips を取り入れるのでなくエッセンシャル思考を生きる。
+    ギリシャ語のメタノイアのように心のありようがそのヒトの変容をもたらす。
+    周りからの誘惑には NO といい、自分のすべきことを選択し人生をコントロールする。
+    容易なことではないが根気強く努力すれば、徐々に迷うことない・流されないシンプルで充実した生き方になる。
+    限りある人生だからこそ本当に重要なことを存分に生きる。
+    今のわたしには個人的な読書や開発がマインドフルネスの時間かな。そのことだけに集中できてスッキリする。
+    20 章は多少ポエムがかってるが好きな章。息をするようにエッセンシャルであれる様に毎日続けることが重要だと考えている。
+    来年で本書を読み始めて 10 年だが昔よりは随分とエッセンシャルになったと思うがどうかな。
