--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -116,3 +116,14 @@
     今のわたしには個人的な読書や開発がマインドフルネスの時間かな。そのことだけに集中できてスッキリする。
     20 章は多少ポエムがかってるが好きな章。息をするようにエッセンシャルであれる様に毎日続けることが重要だと考えている。
     来年で本書を読み始めて 10 年だが昔よりは随分とエッセンシャルになったと思うがどうかな。
+- date: 2025-12-12
+  bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
+  pages: 296 ~ 307, i ~ x
+  notes: |
+    終章, 原注。
+    エッセンシャル思考をチームに適用することがチームのパフォーマンスを引き上げる。
+    シンプルな方針、明確な目標・方向性、厳選された人材、小さな進歩の積み重ね。
+    これ今読んだらデマルコ流のマネジメントですべきこととほぼ同じやな。
+    これで本書は終わり。改めて読み直して良かった。何かを突き詰めた先に見出す抽象的な枠組みは似通ってくるんだ。
+    エッセンシャル思考のいうシンプルは、実践するのが難しいというのも含めて Simple Made Easy そのものだ。
+    つぎはエフォートレス思考読も。
