--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -97,3 +97,7 @@
   bookTitle: エッセンシャル思考 最少の時間で成果を最大にする
   bookAuthor: Greg McKeown, 高橋璃子
   previouslyRead: true
+- id: effortless
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  bookAuthor: Greg McKeown, 高橋璃子
+  previouslyRead: true
