--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -127,3 +127,16 @@
     これで本書は終わり。改めて読み直して良かった。何かを突き詰めた先に見出す抽象的な枠組みは似通ってくるんだ。
     エッセンシャル思考のいうシンプルは、実践するのが難しいというのも含めて Simple Made Easy そのものだ。
     つぎはエフォートレス思考読も。
+- date: 2025-12-13
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 1 ~ 35
+  notes: |
+    Prologue。
+    エッセンシャル思考で本質だけに絞ったとしても忙し過ぎるならどうするか。
+    エフォートレス思考はどのようにやるかを極める思考で、本質的なことを最小の努力で達成する。
+    頭の中の些末なノイズを取り除き集中できる余裕を生む、やるべきことをなるべくシンプルに簡単にやり遂げ、その成果が勝手に積み上がるような取り組みをする。
+    ヒトの人生は厳しく困難も多いが、エフォートレス思考ですべてとはいかなくとも幾らかは楽にできる。
+    エッセンシャル思考のガンジーの件を読めばわかるが、極限まで本質を突き詰めた先は大事なものが少なくてこのような忙しさはないのだと思う。
+    恐らく忙し過ぎるということは大事なものを絞りきれてなくて多過ぎるんだ。
+    ただ現代社会である程度の欲求を満たそうとすると忙しさは避けられないので、エフォートレス思考が必要になるのだろうという認識。
+    わたしも例に漏れず忙しいので、多分 2 回目だけど本書を改めて読むことにした。
