--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -140,3 +140,19 @@
     恐らく忙し過ぎるということは大事なものを絞りきれてなくて多過ぎるんだ。
     ただ現代社会である程度の欲求を満たそうとすると忙しさは避けられないので、エフォートレス思考が必要になるのだろうという認識。
     わたしも例に漏れず忙しいので、多分 2 回目だけど本書を改めて読むことにした。
+- date: 2025-12-14
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 36 ~ 77
+  notes: |
+    Part 1 エフォートレスな精神。 第 1 ~ 2 章。
+    認知心理学に知覚的負荷という概念がある。ヒトはネガティブな感情値が高いことが頭の中にあると大事なことを優先できなくなる。
+    そういったノイズを取り除くことでエフォートレスな精神を得る。
+    苦労の価値を疑う。認知容易性のバイアス・最小努力の法則といったヒトの自然な傾向に抗わず強みに変える。
+    頑張りすぎる方法でなく、視点を変え、前提を疑い、楽にできる方法を探す。
+    多くの人が持つ、重要なことは苦痛/楽しいことは重要でないという思い込みが、重要なことを成し遂げる邪魔をする。
+    「遅延指標」を減らし行動の結果がすぐ得られるようにすれば行動自体が楽になる。
+    また遊びと仕事は共存できるだけでなく互いを引き立てることができ、なくてはならない儀式に発展する。
+    行動経済学では、習慣と儀式を分けるのは行動したときに満足が得られるか。
+    儀式を繰り返すことで自分の人生の一部となれば、エフォートレスな精神に立ち戻るための強力な道具となる。
+    プリセットルーティンもここでいう儀式やな。わたしも朝のルーティンをやることで気持ちが整う。
+    楽に楽しんで仕事するとか必ず決まり切った儀式を踏むとかは、知ってるヒトは実践するけど、理解されないこともあるのが残念よな。
