--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -156,3 +156,15 @@
     儀式を繰り返すことで自分の人生の一部となれば、エフォートレスな精神に立ち戻るための強力な道具となる。
     プリセットルーティンもここでいう儀式やな。わたしも朝のルーティンをやることで気持ちが整う。
     楽に楽しんで仕事するとか必ず決まり切った儀式を踏むとかは、知ってるヒトは実践するけど、理解されないこともあるのが残念よな。
+- date: 2025-12-15
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 78 ~ 111
+  notes: |
+    第 3 ~ 4 章。
+    脳の働きを邪魔する頭の中の後悔・怒りといった不要なものを減らす。不満に目を向けると今あるものが見えなくなる。
+    今あるものに充足することがポジティブなサイクルを生み出す。心理学でいう拡張-形成理論。不満を感じたときに 1 つ感謝を見つけるテクニックが使える(リフレーミングか)。
+    ネガティブな感情を背負い続ける人生よりも、現実を受け入れ負の感情に囚われず価値ある未来を選ぶ。それが自分自身を解放する変化になる。
+    最高のパフォーマンスを発揮するには十分な休息を取る必要がある。睡眠不足になる度に睡眠負債が積み重なり認知機能を低下させる。
+    心身が本当に休まるのはノンレム睡眠のときだけ。仮に十分な睡眠が取れなくても昼寝することでパフォーマンスを取り戻すことができる。
+    わたし自身過去のネガティブな感情に囚われやすいのでこればっかりはエフォートレスでないな。理不尽な出来事には気持ちの整理が難しいこともある。
+    実際のところネガティブな感情も自分の一部なので、それらのコレクションを鑑賞できるくらいのゆとりが必要なんやろな。訓練が必要だ。
