--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -168,3 +168,12 @@
     心身が本当に休まるのはノンレム睡眠のときだけ。仮に十分な睡眠が取れなくても昼寝することでパフォーマンスを取り戻すことができる。
     わたし自身過去のネガティブな感情に囚われやすいのでこればっかりはエフォートレスでないな。理不尽な出来事には気持ちの整理が難しいこともある。
     実際のところネガティブな感情も自分の一部なので、それらのコレクションを鑑賞できるくらいのゆとりが必要なんやろな。訓練が必要だ。
+- date: 2025-12-16
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 112 ~ 129
+  notes: |
+    第 5 章。
+    見て観察しない・聞きながら他のことを考えるのは雑多なノイズのせい。認知能力を高めるトレーニングは、ノイズの中でもフォーカスする力を身につける可能性を示唆する。
+    人間関係においても、そこにいる人の話全てに同調する必要はないが、きちんと耳を傾け相手に集中することが重要。全力でそばにいることの価値は計り知れない。
+    何か考え事をしてたりすると家族の話も上の空になりがちなので、改めてエフォートレスな精神を育む必要性を感じるな。
+    これで PART 1 は終わり。改めて読んでみて、まだエフォートレスな精神がさほど身についてないと感じたが、それが認識できる程度にはなってるってことかな。
