--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -177,3 +177,16 @@
     人間関係においても、そこにいる人の話全てに同調する必要はないが、きちんと耳を傾け相手に集中することが重要。全力でそばにいることの価値は計り知れない。
     何か考え事をしてたりすると家族の話も上の空になりがちなので、改めてエフォートレスな精神を育む必要性を感じるな。
     これで PART 1 は終わり。改めて読んでみて、まだエフォートレスな精神がさほど身についてないと感じたが、それが認識できる程度にはなってるってことかな。
+- date: 2025-12-17
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 130 ~ 153
+  notes: |
+    PART 2 エフォートレスな行動 第 6 ~ 7 章。
+    ある一定の入力を超えると結果に結びずむしろパフォーマンスが低下する。経済学でいう「収穫逓減の法則」。
+    無理に頑張らず、流れに任せ自然と目の前のことに没頭し成果を出す。ゾーン、フロー、ピークエクスペリエンス、無為。
+    ゴールの明確なイメージがないと決して完成しない。いつまでも手を加えても効果は殆ど得られない。コストとリターンが逆転する直前を完成とするテクニック。明確なゴールは始めるためにも有効。
+    大量の TODO があるような場合はその日の完了リストを明確にする。スウェーデン式「死の片づけ」の考え方を応用し、人生の完了リストを明確にする。
+    壮大なロードマップであっても最初の一歩が明確でシンプルで小さいゴールであればすぐに始められる。 Minimum Viable Product 然り。
+    脳科学・心理学ではヒトが「今」を感じられるのは 2.5 秒間。 2.5 秒で重要な一歩を踏み出すか無駄に行動するか、小さな積み重ねがゴールへの道程を容易にも困難にもする。
+    2.5 秒の裏付けは知らんので調べるか。疲れてるときほどコストとリターンのバランスから意識がそれて余計に消耗したりする。
+    その切り上げ時も、ここでいう 2.5 秒の最初の小さな一歩で決められるかにかかってるわけで、自制心が試されてる気がする。
