--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -190,3 +190,17 @@
     脳科学・心理学ではヒトが「今」を感じられるのは 2.5 秒間。 2.5 秒で重要な一歩を踏み出すか無駄に行動するか、小さな積み重ねがゴールへの道程を容易にも困難にもする。
     2.5 秒の裏付けは知らんので調べるか。疲れてるときほどコストとリターンのバランスから意識がそれて余計に消耗したりする。
     その切り上げ時も、ここでいう 2.5 秒の最初の小さな一歩で決められるかにかかってるわけで、自制心が試されてる気がする。
+- date: 2025-12-18
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 154 ~ 179
+  notes: |
+    第 8 ~ 9 章。
+    目標を達成するために要最低限の手順で済ませる。品質は下げない。取り除かれる無駄な手順や不要な作業が重要な成果を生むことはない。
+    複雑な手順を減らすのでなく、ゼロから手順を考える。
+    アジャイルソフトウェア開発宣言の「シンプルさ(やらないことを最大限に増やす技術)が本質だ」。
+    手軽に失敗して修正できることが、学びを重ねて成功につながる最短ルート。ゴミから始める。恥ずかしいと思う必要はない。
+    失敗しても影響の少ない「学習サイズの失敗」を重ねて学ぶ。どんな偉大な業績も最初の一歩はゴミみたいなものだった。
+    例えば文章で最初の下書きすら書けないようなら下書きの下書き・バージョン 0 としてなんでも良いから書き始める。その行動で思考が動き出す。
+    この辺りは割と今のソフトウェア開発では一般的に知られた考えと同じ。
+    仕事では何も恥ずかしいと思わんが、例えば外国語を学ぶ際にヒトとぎこちなく話すのを恥ずかしく思わないのは難しいよな。コツがあるのか？
+    今なら AI の言語学習があるし、まずそれで慣れるのがいいか。何事も訓練やな。
