--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -204,3 +204,14 @@
     この辺りは割と今のソフトウェア開発では一般的に知られた考えと同じ。
     仕事では何も恥ずかしいと思わんが、例えば外国語を学ぶ際にヒトとぎこちなく話すのを恥ずかしく思わないのは難しいよな。コツがあるのか？
     今なら AI の言語学習があるし、まずそれで慣れるのがいいか。何事も訓練やな。
+- date: 2025-12-19
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 180 ~ 203
+  notes: |
+    第 10 章, PART 3 エフォートレスのしくみ化。
+    調子が良くても悪くても持続可能でモチベーションを維持できる程度の決まったペースを維持する。全力を出し切ると後で思うようにいかなくなる。
+    「ゆっくりはスムーズで、スムーズは速い」。現代のような複雑で不確実な状況(VUCA)に面しながらも確実に進む方法。
+    頑張った分だけ結果が得られる直線的な成果でなく、福利のような累積的な成果を目指す。
+    例えば基礎を学ぶ・知識を共有する・自動化・人選・問題を未然に防ぐなど、小さな労力がその後の継続的で大きな成果に繋がる。
+    要は未来を作るための積み重ねのことか。技術戦略や事業継続性を担うとこのような行動を取らざるをえないのでわかりみ。
+    テコの例えで、力が良い・悪い効果いずれにも働く、というあたりは選択を誤らないために最小の努力で最大の効果を得る手段を選ぶってのに繋がるんやろうな。
