--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -215,3 +215,16 @@
     例えば基礎を学ぶ・知識を共有する・自動化・人選・問題を未然に防ぐなど、小さな労力がその後の継続的で大きな成果に繋がる。
     要は未来を作るための積み重ねのことか。技術戦略や事業継続性を担うとこのような行動を取らざるをえないのでわかりみ。
     テコの例えで、力が良い・悪い効果いずれにも働く、というあたりは選択を誤らないために最小の努力で最大の効果を得る手段を選ぶってのに繋がるんやろうな。
+- date: 2025-12-20
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 204 ~ 229
+  notes: |
+    第 11 ~ 12 章。
+    一度限りの知識でなくニュートンのプリンキピアのような原理原則を一度身につければいつでも何度でも利用できる。
+    基礎を身につけるのは容易なことではないが、根幹がしっかりしていれば脳の神経可塑性により新しい知識を効率的に吸収しやすくなる。
+    読書は賢い知恵を追体験できるという点で最も効率的な知識の獲得方法。他分野の知識が交流したときに新たなものが生まれる。
+    それが最終的に誰もやらなかった自分だけの知識を極めることに繋がる。
+    ヒトに伝える術としてストーリーは伝わり易く記憶に残りやすい。自分の言葉で伝えるために思考することが学びにつながる。
+    最も重要なメッセージを明確にし、シンプルに伝えることが成果を最大化するポイント。
+    この辺はエンジニア界隈でもよく知られたものと重なる。本を読む本・メディチインパクト・ハッカーと画家を思い浮かべた。
+    現時点で自分だけの知識を持っているかは比較したことがないのでよくわからないが、今の方向性の先にそのような何かがある気はするな。
