--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -228,3 +228,15 @@
     最も重要なメッセージを明確にし、シンプルに伝えることが成果を最大化するポイント。
     この辺はエンジニア界隈でもよく知られたものと重なる。本を読む本・メディチインパクト・ハッカーと画家を思い浮かべた。
     現時点で自分だけの知識を持っているかは比較したことがないのでよくわからないが、今の方向性の先にそのような何かがある気はするな。
+- date: 2025-12-21
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 230 ~ 253
+  notes: |
+    第 13 ~ 14 章。
+    人間の注意力には限界がある。脳のメモリを節約するために、記憶に負荷をかけないため予め考える作業を完了できる自動化が必要。
+    必要なものはハイテクで自動的に継続できるようにし、不要なものはローテクで自動化する。不要なものが継続されないようにする Tips 。
+    信頼関係はチームワークの潤滑油。不信はあらゆる作業に追加のコストを要する。
+    信頼性の設計は、ルール・期待値・優先順位が明確で同じ方向性を向ける環境を作ること。
+    わたしも家の照明を自動化してる。判断の回数が減るのもまた良い。
+    信頼についてはデマルコ本に通ずる普遍的な要素やな。
+    また、わたしは信頼ポイントと呼んでるが、誠実な仕事で貯めた信頼で挑戦や権限の拡張ができて、組織の活動を支える通貨のように捉えてる。
