--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -240,3 +240,13 @@
     わたしも家の照明を自動化してる。判断の回数が減るのもまた良い。
     信頼についてはデマルコ本に通ずる普遍的な要素やな。
     また、わたしは信頼ポイントと呼んでるが、誠実な仕事で貯めた信頼で挑戦や権限の拡張ができて、組織の活動を支える通貨のように捉えてる。
+- date: 2025-12-22
+  bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
+  pages: 254 ~ 280, i ~ xiv
+  notes: |
+    第 15 章, Epilogue, 原注。
+    人はちょっとした問題が起こっても面倒なのでそのままにしてしまう。「時間管理のロングテール」で見れば、早期の解決で長期間の時間とコストが節約されることがわかる。
+    問題が起こる前にその原因を潰す。一つの些細なミスを防ぐことが、連鎖的な浪費を呼ぶのを防ぐ。
+    人生に何が起こり苦難が大きくとも、自分の人生を選択することの大切さに比べれば些末な問題である。
+    信じられないような不運も突然起こり得るからな。それらを背負って生きていくには、極端に強くなるか生きることを簡単にするかしないと。
+    本書はこれで終わり。いま読み返して良かったな。あと年末まで気楽に読める本を読んで年越したらゴツい読み本を読んでみようか。
