--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -101,3 +101,6 @@
   bookTitle: エフォートレス思考 努力を最小化して成果を最大化する
   bookAuthor: Greg McKeown, 高橋璃子
   previouslyRead: true
+- id: no-hard-work
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  bookAuthor: Jason Fried, David Heinemeier Hansson, 久保美代子
