--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -250,3 +250,11 @@
     人生に何が起こり苦難が大きくとも、自分の人生を選択することの大切さに比べれば些末な問題である。
     信じられないような不運も突然起こり得るからな。それらを背負って生きていくには、極端に強くなるか生きることを簡単にするかしないと。
     本書はこれで終わり。いま読み返して良かったな。あと年末まで気楽に読める本を読んで年越したらゴツい読み本を読んでみようか。
+- date: 2025-12-23
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 1 ~ 27
+  notes: |
+    今更だがエフォートレス思考に重なったので読む。 300p 程なので多分年末年始の休みで読めるはず。
+    ストレスに追われ狂ったように働くんじゃなく、無駄を削ぎ落とした持続可能なカーム・カンパニー(穏やかな会社)を設計するための Tips 。
+    会社も製品と同じように改善を繰り返し変化していく。会社を良くしていくのは経営者だけじゃなく社員みんなが関係すること。
+    これ結構重要よな。所属組織に自分で影響を与えられないと思ってるヒトはかなりいる。主導権が自分達にあるということを忘れてる。
