--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -255,6 +255,7 @@
   pages: 1 ~ 27
   notes: |
     今更だがエフォートレス思考に重なったので読む。 300p 程なので多分年末年始の休みで読めるはず。
+    はじめに。
     ストレスに追われ狂ったように働くんじゃなく、無駄を削ぎ落とした持続可能なカーム・カンパニー(穏やかな会社)を設計するための Tips 。
     会社も製品と同じように改善を繰り返し変化していく。会社を良くしていくのは経営者だけじゃなく社員みんなが関係すること。
     これ結構重要よな。所属組織に自分で影響を与えられないと思ってるヒトはかなりいる。主導権が自分達にあるということを忘れてる。
